Fix alignments of column names in data table (#53)
* Fix alignements of column names in data table

* Update travis file

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -525,6 +525,14 @@ a.logo {
   position: unset !important;
 }
 
+.dataTable-table > thead > tr > th {
+  vertical-align: middle;
+}
+
+.dataTable-table a.dataTable-sorter {
+  margin: 3px 5px;
+}
+
 .button_sys_run {
   border-color: transparent;
   color: transparent;
